# htmx-wasm

./: .gitignore  Cargo.toml  README.md  build.sh  serve.sh  watch.sh  workbox-config.js
src/: lib.rs  main.rs
www/: index.html  index.js  service-worker.js
