[package]
name = "htmx-wasm"
version = "0.1.0"
edition = "2021"
authors = ["cl <cluna@purelunacy.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
# expr = { path = "../expr" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = "1.0.197"
serde_json = "1.0.115"
gloo-utils = "0.2.0"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
evalexpr = { version = "11.3.0", features = ["serde", "serde_support"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
